--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1.0">
-<meta name="monetization" content="$ilp.uphold.com/q8zFyz46FjDq">
+    <meta name="monetization" content="$ilp.uphold.com/q8zFyz46FjDq">
     <meta name="description" content="front-end, Victoria Akpan, Victoria, Akpan, web development, Javasript">
-<meta name="author" content="Victoria Akpan">
+    <meta name="author" content="Victoria Akpan">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&family=Vollkorn:wght@600;700;800;900&display=swap"
         rel="stylesheet">
@@ -58,16 +58,16 @@
                                 </li>
                             </ul>
                             <div class="header-social-icons mobile-social-icons text-center flex mx-auto">
-                                <a href="https://twitter.com/me_veey?s=03" target="_blank" rel="noopener noreferrer"
-                                    class="flex">
+                                <a href="https://twitter.com/veedahv" target="_blank" rel="noopener noreferrer"
+                                    aria-label="twitter link" class="flex">
                                     <i class="fa fa-twitter" aria-hidden="true"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank"
-                                    rel="noopener noreferrer" class="flex mid-a">
+                                    rel="noopener noreferrer" aria-label="linkedin link" class="flex mid-a">
                                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                                 </a>
                                 <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer"
-                                    class="flex">
+                                    aria-label="github link" class="flex">
                                     <i class="fa fa-github" aria-hidden="true"></i>
                                 </a>
                             </div>
@@ -150,10 +150,11 @@
                                     <p class="card-text">
                                         While not coding or learning, I enjoy watching movies, playing
                                         games, reading good books, experimenting with baking ingredients,
-                                        and also spending time with friends and family. 
+                                        and also spending time with friends and family.
                                     </p>
-                                    <a href="https://veedah.hashnode.dev/" target="_blank" rel="noopener noreferrer" class="blog-link">Visit my blog
-                                    <i class="fa fa-long-arrow-right" aria-hidden="true"></i>                                    
+                                    <a href="https://veedah.hashnode.dev/" target="_blank" rel="noopener noreferrer"
+                                        class="blog-link">Visit my blog
+                                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
@@ -247,7 +248,7 @@
                                 </div>
                             </div>
                             <div class="grid edu-grid">
-                                <div class="edu-card card">
+                                <!-- <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
                                             <h3 class="edu-title">WASSCE</h3>
@@ -261,8 +262,8 @@
                                             </li>
                                         </ul>
                                     </div>
-                                </div>
-                                <div class="edu-card card">
+                                </div> -->
+                                <!-- <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
                                             <h3 class="edu-title">Tech 101</h3>
@@ -281,8 +282,8 @@
                                         <button type="button" class="certificate-btn blue-link">View
                                             Certificate</button>
                                     </div>
-                                </div>
-                                <div class="edu-card card">
+                                </div> -->
+                                <!-- <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
                                             <h3 class="edu-title">Responsive web designs</h3>
@@ -312,6 +313,37 @@
                                         <button type="button" class="certificate-btn blue-link">View
                                             Certificate</button>
                                     </div>
+                                </div> -->
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
+                                            <h3 class="edu-title">Front-End Development</h3>
+                                            <h4 class="edu-time">April - June 2021</h4>
+                                        </div>
+                                        <h5 class="edu-venue">FrontEndFoxes</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Built a Bank App.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a Typing Game.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a Pet App.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a Personal Portfolio webpage.
+                                            </li>
+                                            <li class="edu-list">
+                                                Built a Browser Extension.
+                                            </li>
+                                        </ul>
+                                        <img src="./assets/certificate/web responsive certificate.PNG"
+                                            class="w-100 certificate-img-tag" alt="web responsive certificate">
+                                        <!-- <button type="button" class="certificate-btn blue-link">View
+                                            Certificate</button> -->
+                                    </div>
                                 </div>
                                 <div class="edu-card card">
                                     <div class="card-body">
@@ -338,6 +370,23 @@
                                             Certificate</button>
                                     </div>
                                 </div>
+                                <!-- <div class="grid edu-grid"> -->
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
+                                            <h3 class="edu-title">Front-End Microdegree</h3>
+                                            <h4 class="edu-time">December 2020 - April 2021</h4>
+                                        </div>
+                                        <h5 class="edu-venue">Ustacky</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Implemented an e-commerce website design integrated with Paystack test
+                                                payment method.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
@@ -347,8 +396,11 @@
                                         <h5 class="edu-venue">University of Uyo</h5>
                                         <hr>
                                         <ul class="edu-ul">
-                                            <li class="edu-list">
+                                            <!-- <li class="edu-list">
                                                 Studying for a B.Eng for Computer Engineering
+                                            </li> -->
+                                            <li class="edu-list">
+                                                Built a simple airline booking platform.
                                             </li>
                                         </ul>
                                         <img src="./assets/certificate/web responsive certificate.PNG"
@@ -359,7 +411,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="">
+                        <!-- <div class="">
                             <div>
                                 <h2 class="headings">
                                     Work Experience
@@ -370,13 +422,32 @@
                                     <div class="card-body">
                                         <div class="edu-head flex">
                                             <h3 class="edu-title">Front-End Intern</h3>
-                                            <h4 class="edu-time">December 2020 - till date</h4>
+                                            <h4 class="edu-time">December 2020 - August 2021</h4>
                                         </div>
                                         <h5 class="edu-venue">Ustacky</h5>
                                         <hr>
                                         <ul class="edu-ul">
                                             <li class="edu-list">
-                                                Implemented an e-commerce website design integrated with Paystack test payment method.
+                                                Design Implementation using web technologies like HTML, CSS JavaScript,
+                                                VueJs, Bootstrap.
+                                            </li>
+                                            <li class="edu-list">
+                                                Mentoring students in training.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
+                                            <h3 class="edu-title">Code Reviewer</h3>
+                                            <h4 class="edu-time">June 2021 - till date</h4>
+                                        </div>
+                                        <h5 class="edu-venue">Ustacky</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                Reviewing students' code, and providing valuable feedback and advice.
                                             </li>
                                         </ul>
                                     </div>
@@ -405,8 +476,23 @@
                                         </ul>
                                     </div>
                                 </div>
+                                <div class="edu-card card">
+                                    <div class="card-body">
+                                        <div class="edu-head flex">
+                                            <h3 class="edu-title">GDSC Events Lead</h3>
+                                            <h4 class="edu-time">September 2021 - Present</h4>
+                                        </div>
+                                        <h5 class="edu-venue">GDSC UNIUYO</h5>
+                                        <hr>
+                                        <ul class="edu-ul">
+                                            <li class="edu-list">
+                                                I plan and organize GDSC UNIUYO events together with my co-lead
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -441,11 +527,11 @@
                                                 </a> -->
                                                 <h3 class="card-title">Blog Site</h3>
                                                 <a href="https://veedahv-vue-blog.netlify.app/" target="_blank"
-                                                rel="noopener noreferrer" class="btn">
+                                                    rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Live Demo
                                                 </a>
-                                                <a href="https://github.com/veedahv/my-blog"
-                                                    target="_blank" rel="noopener noreferrer" class="btn">
+                                                <a href="https://github.com/veedahv/my-blog" target="_blank"
+                                                    rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Repo Link
                                                 </a>
                                             </div>
@@ -581,23 +667,23 @@
                                 <h1>Connect With Me Via</h1>
                             </div>
                             <div class="social-media-icons my">
-                                <a href="https://twitter.com/me_veey?s=03" target="_blank" rel="noopener noreferrer"
-                                    class="">
+                                <a href="https://twitter.com/veedahv" target="_blank" rel="noopener noreferrer"
+                                    aria-label="twitter link" class="">
                                     <i class="fa fa-twitter" aria-hidden="true"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank"
-                                    rel="noopener noreferrer" class="">
+                                    rel="noopener noreferrer" aria-label="linkedin link" class="">
                                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                                 </a>
                                 <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="">
-                                    <i class="fa fa-github" aria-hidden="true"></i>
+                                    <i class="fa fa-github" aria-label="github link" aria-hidden="true"></i>
                                 </a>
-                                <a href="http://wa.me/2347087040050?text=Hi,%20I'm%20interested%20in%20your%20services"
-                                    target="_blank" rel="noopener noreferrer" class="">
+                                <!-- <a href="http://wa.me/2347087040050?text=Hi,%20I'm%20interested%20in%20your%20services"
+                                    target="_blank" rel="noopener noreferrer" aria-label="linkedin link" class="">
                                     <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                                </a>
+                                </a> -->
                                 <a href="https://www.instagram.com/mhvee__e/" target="_blank" rel="noopener noreferrer"
-                                    class="">
+                                    aria-label="instagram link" class="">
                                     <i class="fa fa-instagram" aria-hidden="true"></i>
                                 </a>
                             </div>
@@ -621,25 +707,25 @@
                         Icons from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
                     </div>
                     <p class="text-center">
-                        &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dahv</span></a> || 2021
+                        &#169; <a class="brand" href="">Vee<span class="logo-blue">dahv</span></a> || 2021
                     </p>
                 </div>
             </div>
         </footer>
     </div>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-    </script>
+    </script> -->
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script> -->
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script> -->
 
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script> -->
 
 
     <script src="js/script.js"></script>
