--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&family=Vollkorn:wght@600;700;800;900&display=swap"
         rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
@@ -186,7 +186,7 @@
                         <div class="col-md-6">
                             <div>
                                 <h2 class="headings">
-                                    Technologies
+                                    Tools / Technologies
                                 </h2>
                             </div>
                             <div class="grid skill-grid">
@@ -230,6 +230,12 @@
                                     <div class="card-body">
                                         <i class="fa fa-4x fa-git"></i>
                                         <h5 class="contact-text p-1">Git</h5>
+                                    </div>
+                                </div>
+                                <div class="skill-cards card">
+                                    <div class="card-body">
+                                        <i class="fab fa-4x fa-angular"></i>
+                                        <h5 class="contact-text p-1">Angular</h5>
                                     </div>
                                 </div>
                             </div>
@@ -727,6 +733,7 @@
 
     <!-- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script> -->
 
+    <script src="https://kit.fontawesome.com/3ad8d4fbe1.js" crossorigin="anonymous"></script>
 
     <script src="js/script.js"></script>
 </body>
