--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1.0">
     <meta name="description" content="front-end, front-end web developer, Victoria Akpan, Victoria, Akpan, web development, Javasript">
+    <meta name="monetization" content="$ilp.uphold.com/q8zFyz46FjDq">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&family=Vollkorn:wght@600;700;800;900&display=swap"
         rel="stylesheet">
