--- a/index.html
+++ b/index.html
@@ -564,15 +564,15 @@
                                 </div>
                                 <div class="project-grid-card project-card">
                                     <div class="h-100">
-                                        <img src="./images/veeshop-dashboard.jpg" class="h-100 w-100" alt="...">
+                                        <img src="./images/shooebai-snip.png" class="h-100 w-100" alt="...">
                                         <div class="card-details w-100">
                                             <div class="w-100">
-                                                <h3 class="card-title p-1">Ecommerce Dashboard</h3>
-                                                <a href="https://vee-ecommerce-dashboard.netlify.app/" target="_blank"
+                                                <h3 class="card-title p-1">Sho_oebai</h3>
+                                                <a href="https://shooebai.netlify.app/" target="_blank"
                                                     rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Live Demo
                                                 </a>
-                                                <a href="https://github.com/veedahv/ecommerce-dashboard" target="_blank"
+                                                <a href="https://github.com/veedahv/shooebai" target="_blank"
                                                     rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Repo Link
                                                 </a>
