react skill added

--- a/index.html
+++ b/index.html
@@ -234,6 +234,12 @@
                                 </div>
                                 <div class="skill-cards card">
                                     <div class="card-body">
+                                        <i class="fab fa-4x fa-react"></i>
+                                        <h5 class="contact-text p-1">React</h5>
+                                    </div>
+                                </div>
+                                <div class="skill-cards card">
+                                    <div class="card-body">
                                         <i class="fab fa-4x fa-angular"></i>
                                         <h5 class="contact-text p-1">Angular</h5>
                                     </div>
