--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                                         I am a front-end web developer who replicates designs using
                                         the appropriate front-end techniques.
                                     </p>
-                                    <p class="card-text">
+                                    <!-- <p class="card-text">
                                         Currently, I am studying Computer
                                         Engineering at the University of Uyo, Nigeria.
                                         I love solving problems and learning new things.
-                                    </p>
+                                    </p> -->
                                     <p class="card-text">
                                         While not coding or learning, I enjoy watching movies, playing
                                         games, reading good books, experimenting with baking ingredients,
@@ -190,7 +190,7 @@
                                 </h2>
                             </div>
                             <div class="grid skill-grid">
-                                <div class="skill-cards card">
+                                <!-- <div class="skill-cards card">
                                     <div class="card-body">
                                         <img src="./images/HTML5_Badge.svg" alt="">
                                         <h5 class="contact-text p-1">HTML</h5>
@@ -207,7 +207,7 @@
                                         <img src="./images/javascript.png" alt="">
                                         <h5 class="contact-text p-1">JavaScript</h5>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="skill-cards card">
                                     <div class="card-body">
                                         <img src="./images/vue-js.png" alt="">
@@ -246,7 +246,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="">
+                        <!-- <div class="">
                             <div>
                                 <h2 class="headings">
                                     Education
@@ -260,72 +260,6 @@
                                 </div>
                             </div>
                             <div class="grid edu-grid">
-                                <!-- <div class="edu-card card">
-                                    <div class="card-body">
-                                        <div class="edu-head flex">
-                                            <h3 class="edu-title">WASSCE</h3>
-                                            <h4 class="edu-time">Sep 2015 - Jul 2017</h4>
-                                        </div>
-                                        <h5 class="edu-venue">TISS</h5>
-                                        <hr>
-                                        <ul class="edu-ul">
-                                            <li class="edu-list">
-                                                Passed my WASSCE with all distinctions on my certificate.
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div> -->
-                                <!-- <div class="edu-card card">
-                                    <div class="card-body">
-                                        <div class="edu-head flex">
-                                            <h3 class="edu-title">Tech 101</h3>
-                                            <h4 class="edu-time">Mar 2020</h4>
-                                        </div>
-                                        <h5 class="edu-venue">Roothub</h5>
-                                        <hr>
-                                        <ul class="edu-ul">
-                                            <li class="edu-list">
-                                                Built a simple skincare website using HTML and CSS.
-                                            </li>
-                                        </ul>
-                                        </ul>
-                                        <img src="./assets/certificate/tech101 certificate.jpg"
-                                            class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                        <button type="button" class="certificate-btn blue-link">View
-                                            Certificate</button>
-                                    </div>
-                                </div> -->
-                                <!-- <div class="edu-card card">
-                                    <div class="card-body">
-                                        <div class="edu-head flex">
-                                            <h3 class="edu-title">Responsive web designs</h3>
-                                            <h4 class="edu-time">Sep 2020</h4>
-                                        </div>
-                                        <h5 class="edu-venue">FreeCodeCamp</h5>
-                                        <hr>
-                                        <ul class="edu-ul">
-                                            <li class="edu-list">
-                                                Built a tribute page.
-                                            </li>
-                                            <li class="edu-list">
-                                                Built a survey form.
-                                            </li>
-                                            <li class="edu-list">
-                                                Built a product landing page.
-                                            </li>
-                                            <li class="edu-list">
-                                                Built a Technical Documentation page.
-                                            </li>
-                                            <li class="edu-list">
-                                                Built a Personal Portfolio webpage.
-                                            </li>
-                                        </ul>
-                                        <img src="./assets/certificate/web responsive certificate.PNG"
-                                            class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                        <button type="button" class="certificate-btn blue-link">View
-                                            Certificate</button>
-                                    </div>
-                                </div> -->
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
@@ -351,10 +285,6 @@
                                                 Built a Browser Extension.
                                             </li>
                                         </ul>
-                                        <!-- <img src="./assets/certificate/web responsive certificate.PNG"
-                                            class="w-100 certificate-img-tag" alt="web responsive certificate"> -->
-                                        <!-- <button type="button" class="certificate-btn blue-link">View
-                                            Certificate</button> -->
                                     </div>
                                 </div>
                                 <div class="edu-card card">
@@ -376,13 +306,8 @@
                                                 Created an e-commerce dashboard for an online store.
                                             </li>
                                         </ul>
-                                        <!-- <img src="./assets/certificate/roothub-certificate.jpg"
-                                            class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                        <button type="button" class="certificate-btn blue-link">View
-                                            Certificate</button> -->
                                     </div>
                                 </div>
-                                <!-- <div class="grid edu-grid"> -->
                                 <div class="edu-card card">
                                     <div class="card-body">
                                         <div class="edu-head flex">
@@ -408,21 +333,14 @@
                                         <h5 class="edu-venue">University of Uyo</h5>
                                         <hr>
                                         <ul class="edu-ul">
-                                            <!-- <li class="edu-list">
-                                                Studying for a B.Eng for Computer Engineering
-                                            </li> -->
                                             <li class="edu-list">
                                                 Built a simple airline booking platform.
                                             </li>
                                         </ul>
-                                        <!-- <img src="./assets/certificate/web responsive certificate.PNG"
-                                            class="w-100 certificate-img-tag" alt="web responsive certificate"> -->
-                                        <!-- <button type="button" class="certificate-btn blue-link" disabled>View
-                                            Certificate</button> -->
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- <div class="">
                             <div>
                                 <h2 class="headings">
@@ -797,8 +715,7 @@
                                 <div class="project-grid-card">
                                     <div class="">
                                         <div class=" text-center">
-                                            <a href="./projects.html" target="_blank" rel="noopener noreferrer"
-                                                class="mx-auto blue-link">
+                                            <a href="./projects.html" class="mx-auto blue-link">
                                                 Check out more projects
                                             </a>
                                         </div>
