work experience updated

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
         <header class="header w-100">
             <div class="">
                 <nav class="flex w-100">
-                    <a class="brand" href="./projects.html">Vee<span class="logo-blue">dah</span></a>
+                    <a class="brand" href="./projects.html">Vee<span class="logo-blue">dahv</span></a>
                     <a href="./index.html">Back</a>
                 </nav>
             </div>
@@ -293,7 +293,7 @@
                     Icons from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
                 </div>
                 <p class="text-center">
-                    &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a> || 2021
+                    &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dahv</span></a> || 2023
                 </p>
             </div>
         </div>
